src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__byte__bit_count_bytes__impl.snap
---
source: src/expr/src/scalar/func/impls/byte.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: Int64,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: Int64,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: None,
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
